Updated test to use Mocha

--- a/tests/app/static/index.html
+++ b/tests/app/static/index.html
@@ -15,6 +15,11 @@
             console.log('Testing Knot');
             mocha.setup('bdd');
             require('node_module_tests/assert');
+            require('node_module_tests/console');
+            require('node_module_tests/events');
+            require('node_module_tests/path');
+            require('node_module_tests/process');
+            require('node_module_tests/util');
             mocha.run();
         });
     </script>
