Update the process code and added more tests.

--- a/tests/app/static/index.html
+++ b/tests/app/static/index.html
@@ -14,6 +14,7 @@
             //require('node_module_tests');
             console.log('Testing Knot');
             mocha.setup('bdd');
+            require('node_module_tests/require');
             require('node_module_tests/assert');
             require('node_module_tests/console');
             require('node_module_tests/events');
