Added tests for URL

--- a/tests/app/static/index.html
+++ b/tests/app/static/index.html
@@ -21,6 +21,7 @@
             require('./lib/path');
             require('./lib/process');
             require('./lib/util');
+            require('./lib/url');
             mocha.run();
         });
     </script>
