Added tests for querystring

--- a/tests/app/static/index.html
+++ b/tests/app/static/index.html
@@ -22,6 +22,7 @@
             require('./lib/process');
             require('./lib/util');
             require('./lib/url');
+            require('./lib/querystring');
             mocha.run();
         });
     </script>
