Added tests for events

--- a/tests/app/static/index.html
+++ b/tests/app/static/index.html
@@ -23,6 +23,7 @@
             require('./lib/util');
             require('./lib/url');
             require('./lib/querystring');
+            require('./lib/events');
             mocha.run();
         });
     </script>
